rest/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
        - name: rest
          image: demucs-rest: us-central1-docker.pkg.dev/lab7-491318/msaas/demucs-rest:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
