rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service
spec:
  selector:
    app: rest
  type: NodePort
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
